In this commit I added a class and some .properties files to configure and add to the web page different languajes

--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -1,4 +1,4 @@
-#documento que contiene los mensajes en el idioma default
+#documento que tiene los mensajes en el idioma espa\u00f1ol
 plantilla.titulo=Control clientes
 plantilla.pie-pagina=Derechos Reservados
 
@@ -19,4 +19,4 @@ accion.regresar=Regresar
 NotEmpty.persona.nombre=El campo nombre no puede ser vac\u00edo
 NotEmpty.persona.apellido=El campo apellido no puede ser vac\u00edo
 NotEmpty.persona.email=El campo email no puede ser vac\u00edo
-Email.persona.email= El formato del email no es v\u00e1lido
+Email.persona.email= El formato del email no es v\u00e1lido1
