--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,13 +2,22 @@
 plantilla.titulo=Control clientes
 plantilla.pie-pagina=Derechos Reservados
 
+barra.titulo=Inicio
+barra.bienvenido=Bienvenido
+barra.salir=Salir
+
 persona.crear=Crear Persona
 persona.nombre=Nombre
 persona.apellido=Apellido
 persona.email=Email
 persona.telefono=Tel\u00e9fono
-persona.lista-vacia=Lista de personas vac\u00eda
-persona.formulario=Datos de la persona
+persona.saldo=saldo
+persona.lista-vacia=Lista de Clientes vac\u00eda
+persona.formulario=Datos del cliente
+persona.titulo-lista= lista de Clientes
+
+persona.saldoTotal=Saldo Total
+persona.totalClientes=Total Clientes
 
 accion.agregar=Agregar
 accion.editar=Editar
