--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -2,13 +2,22 @@
 plantilla.titulo=Customer Control
 plantilla.pie-pagina=All rights reserved
 
+barra.titulo=Index
+barra.bienvenido=Welcome
+barra.salir=Logout
+
 persona.crear=Create person
 persona.nombre=Name
 persona.apellido=Last Name
 persona.email=Email
 persona.telefono=Phone
+persona.saldo=Balance
 persona.lista-vacia=List of people is empty
 persona.formulario=Person\u00b4s Data
+persona.titulo-lista= Client list
+
+persona.saldoTotal=Total Balance
+persona.totalClientes=Total Customers
 
 accion.agregar=Add
 accion.editar=Edit
